--- a/css/styles.css
+++ b/css/styles.css
@@ -40,3 +40,9 @@ address{
     text-decoration: none;
     color: black;
 }
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
